# automatic-memory

./: CMakeLists.txt  README.md  build-windows.bat  main.cpp  out.txt  setup.py
bindings/: interpolator_python_bindings.cpp  statistics_python_bindings.cpp
interpolation/: cardinal_cubic_bspline_Interpolator.cpp  cardinal_cubic_bspline_Interpolator.hpp  interpolation.cpp  interpolation.hpp  interpolator.cpp  interpolator.hpp  linear_interpolator.cpp  linear_interpolator.hpp  polynomial_interpolator.cpp  polynomial_interpolator.hpp
python/: main.py  statistics_python_bindings.cpp  test.ipynb
python/interpolation/: akima_spline_interpolator.py  extended_interpolator.py  native_linear_interpolator.py
python/pystat/: dataset.py
statistics/: dataset.cpp  dataset.hpp  stat_utils.cpp  stat_utils.hpp  statistics.cpp  statistics.hpp  stats.cpp  stats.hpp
